--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -29,7 +29,7 @@
           <span><mat-icon>location_on</mat-icon></span><b>{{ list.plocation }} </b>
         </div>
         <div class="price">
-          <b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' |
+          <b class="number">{{ list.price }}</b><b class="simbol">€</b><b class="day">/{{ 'day' |
             oTranslate}} </b>
         </div>
       </div>
