--- a/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
+++ b/camerafront/src/app/main/profile/myproducts-new/myproducts-new.component.html
@@ -25,7 +25,7 @@
         <o-text-input fxFill attr="plocation"></o-text-input>
       </o-row>
       <o-row>
-        <o-currency-input fxFill attr="price" currency-symbol="EUR" max-decimal-digits="2"></o-currency-input>
+        <o-currency-input fxFill attr="price" currency-symbol="EUR" max-decimal-digits="2" required="yes"></o-currency-input>
       </o-row>
       <o-row>
         <o-text-input fxFill attr="pdetails"></o-text-input>
