--- a/camerafront/src/app/main/profile/statistics/statistics.component.html
+++ b/camerafront/src/app/main/profile/statistics/statistics.component.html
@@ -1,16 +1,16 @@
 <div class="container">
     <div class="filter-container">
-        <o-form class="oform" #formFilter editable-detail="no" show-header="no" layout-direction="column">
-                <o-daterange-input class="calendar" show-ranges="true" attr="date"
-                    label="{{ 'INPUT.BUTTON.DATERANGE' | oTranslate }}" text-input-enabled="no" read-only="no"
-                    required="yes" (onChange)="queryAll()" clear-button="yes" format="LL" separator=" to "
-                    mode="desktop">
-                </o-daterange-input>
+        <o-form class="oform" #formFilter editable-detail="no" show-header="no">
+            <o-daterange-input class="calendar" show-ranges="true" attr="date"
+                label="{{ 'INPUT.BUTTON.DATERANGE' | oTranslate }}" text-input-enabled="no" read-only="no"
+                required="yes" (onChange)="queryAll()" clear-button="yes" format="LL" separator=" to " mode="desktop">
+            </o-daterange-input>
         </o-form>
     </div>
     <div class="charts-container">
         <div class="pie-container">
-            <h2>Total - {{pieMonth.firstNum | oTranslate}} {{pieMonth.first | oTranslate}} {{pieMonth.separator | oTranslate}} {{pieMonth.secondNum | oTranslate}} {{pieMonth.second | oTranslate}}</h2>
+            <h2>Total - {{pieMonth.firstNum | oTranslate}} {{pieMonth.first | oTranslate}} {{pieMonth.separator |
+                oTranslate}} {{pieMonth.secondNum | oTranslate}} {{pieMonth.second | oTranslate}}</h2>
             <o-chart class="pie" #pie type="pie" layout-fill service="productsRequest" entity="myProductRequestEntry"
                 x-axis="product_name" y-axis="rprofit"></o-chart>
             <span>Total: <b>{{pieTotal}}€</b></span>
@@ -21,14 +21,3 @@
         </div>
     </div>
 </div>
-
-<!-- <o-chart type="discreteBar" x-label="product_name" y-label="product_name"
-    service="productsRequest"
-    entity="rentBalance" x-axis="start_month" y-axis="total"></o-chartx-data-type="time" x-label="Time" y-label="Amount (€)"> [chart-parameters]="chartParams" -->
-
-
-<!-- <div class="barchart2">
-    <o-chart type="discreteBar" x-label="start_month" y-label="total"
-    service="productsRequest"
-    entity="rentBalanceTotal" x-axis="start_month" y-axis="total"></o-chart>
-</div> -->
