--- a/camerafront/src/app/main/products/products-new-rental/products-new-rental.component.html
+++ b/camerafront/src/app/main/products/products-new-rental/products-new-rental.component.html
@@ -43,12 +43,13 @@
             </mat-date-range-picker>
         </mat-form-field> -->
         <mat-form-field class="example-full-width">
-            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="startDate">
+            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker" [min]="minDate" placeholder="Choose a date" [(ngModel)]="startDate">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
+
           <mat-form-field class="example-full-width">
-            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker2" placeholder="Choose a date" [(ngModel)]="endDate">
+            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker2" [min]="calcMinDateTwo()" placeholder="Choose a date" [(ngModel)]="endDate">
             <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
             <mat-datepicker #picker2></mat-datepicker>
           </mat-form-field>
