--- a/camerafront/src/assets/themes/ontimize-dark.css
+++ b/camerafront/src/assets/themes/ontimize-dark.css
@@ -768,7 +768,7 @@ o-row.o-row.bg-level-1 {
 }
 
 .o-table-quickfilter-menu .mat-checkbox {
-  font-size: 14px;
+  font-size: 20px;
 }
 .o-table-quickfilter-menu .mat-checkbox .mat-checkbox-inner-container {
   width: 16px;
@@ -865,7 +865,7 @@ o-row.o-row.bg-level-1 {
 }
 
 .mat-form-field.mat-form-field {
-  font-size: 14px;
+  font-size: 20px;
 }
 .mat-form-field.mat-form-field.mat-form-field-invalid .mat-error {
   display: none;
@@ -966,7 +966,7 @@ o-row.o-row.bg-level-1 {
 }
 
 .o-checkbox .mat-checkbox {
-  font-size: 14px;
+  font-size: 17px;
 }
 .o-checkbox .mat-checkbox .mat-checkbox-ripple {
   left: calc(50% - 17px);
@@ -1190,7 +1190,7 @@ o-row.o-row.bg-level-1 {
 }
 
 .o-search-input-menu .mat-checkbox {
-  font-size: 14px;
+  font-size: 20px;
 }
 .o-search-input-menu .mat-checkbox .mat-checkbox-inner-container {
   width: 16px;
@@ -1294,7 +1294,7 @@ o-row.o-row.bg-level-1 {
   max-height: 36px;
   padding: 0 4px;
   box-shadow: none;
-  font-size: 16px;
+  font-size: 20px;
 }
 .o-form .o-form-toolbar .o-form-toolbar-header.breadcrumb {
   height: 28px;
@@ -1394,7 +1394,7 @@ o-row.o-row.bg-level-1 {
 /* stylelint-enable */
 .mat-badge-content {
   font-weight: 600;
-  font-size: 12px;
+  font-size: 15px;
   font-family: 'League Spartan', sans-serif;
 }
 
@@ -1585,7 +1585,7 @@ o-row.o-row.bg-level-1 {
 
 .mat-expansion-panel-header {
   font-family: 'League Spartan', sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
 }
 
@@ -1897,7 +1897,7 @@ input.mat-input-element {
 }
 
 .mat-tooltip-handset {
-  font-size: 14px;
+  font-size: 18px;
   padding-top: 8px;
   padding-bottom: 8px;
 }
@@ -1911,7 +1911,7 @@ input.mat-input-element {
 }
 
 .mat-list-base .mat-list-item {
-  font-size: 14px;
+  font-size: 18px;
 }
 .mat-list-base .mat-list-item .mat-line {
   white-space: nowrap;
@@ -1925,7 +1925,7 @@ input.mat-input-element {
 }
 
 .mat-list-base .mat-list-option {
-  font-size: 14px;
+  font-size: 18px;
 }
 .mat-list-base .mat-list-option .mat-line {
   white-space: nowrap;
@@ -1980,7 +1980,7 @@ input.mat-input-element {
 
 .mat-option {
   font-family: 'League Spartan', sans-serif;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .mat-optgroup-label {
@@ -5086,7 +5086,7 @@ o-chart .nvd3 .nv-axis path {
   > .mat-expansion-panel-header
   .o-container-title
   span {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
 }
 
@@ -5529,10 +5529,13 @@ textarea:disabled {
 }
 
 .o-table .o-table-container .mat-table.medium tr.mat-row {
-  height: 2px;
+  height: 70px;
+}
+.o-table .o-table-container .mat-table.medium tr.mat-row.o-table-row-expanded {
+  height: 0px;
 }
 .o-table .o-table-container .mat-table.medium tr.mat-row .mat-cell {
-  font-size: 12px;
+  font-size: 18px;
 }
 .o-table
   .o-table-container
@@ -5598,7 +5601,7 @@ textarea:disabled {
   height: 40px;
 }
 .o-table .o-table-container .mat-table.large tr.mat-row .mat-cell {
-  font-size: 14px;
+  font-size: 18px;
 }
 .o-table
   .o-table-container
@@ -5606,7 +5609,7 @@ textarea:disabled {
   tr.mat-row
   .mat-cell
   .mat-form-field {
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .o-table
@@ -5620,7 +5623,7 @@ textarea:disabled {
   .mat-table.large
   tr.o-table-insertable.mat-header-row
   .mat-table-sticky {
-  font-size: 14px;
+  font-size: 18px;
 }
 .o-table
   .o-table-container
@@ -5628,11 +5631,11 @@ textarea:disabled {
   tr.o-table-insertable.mat-header-row
   .mat-table-sticky
   .mat-form-field {
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .o-table .o-table-container .mat-table.large .o-table-no-results span {
-  font-size: 14px;
+  font-size: 18px;
   line-height: 40px;
 }
 
@@ -6332,7 +6335,7 @@ ngx-material-timepicker-container
   font-weight: bold;
 }
 .o-form .o-form-toolbar .o-form-toolbar-header .o-form-navigation span {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: normal;
 }
 .o-form
