--- a/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
@@ -52,14 +52,14 @@
         <o-table-column attr="start_date" title="start_date" width="22%" type="date" format="L"></o-table-column>
         <o-table-column attr="end_date" title="end_date" width="22%" type="date" format="L"></o-table-column>
         <o-table-column attr="rprice" title="price" currency-symbol="{{'€/DAY' | oTranslate}}" type="currency"
-          currency-symbol-position="right"></o-table-column>
+          currency-symbol-position="right" title-align="center"></o-table-column>
         <!-- <o-table-column-calculated attr="profit" title="TOTAL" [operation-function]="calculateProfit"
           currency-symbol="€" type="currency" currency-symbol-position="right">
         </o-table-column-calculated> -->
         <o-table-column attr="rprofit" title="COST" currency-symbol="€" type="currency"
-          currency-symbol-position="right">
+          currency-symbol-position="right" title-align="center">
         </o-table-column>
-        <o-table-column attr="state" title="state" class="o-table-column-centered">
+        <o-table-column attr="state" title="state" class="o-table-column-centered" title-align="center">
           <app-status-column-renderer></app-status-column-renderer>
         </o-table-column>
         <o-table-row-expandable icon-collapse="expand_more" icon-expand="chevron_right">
