btn cancelar se muestra

--- a/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
@@ -4,7 +4,7 @@
     <o-column>
       <o-table #tablein auto-align-titles="yes" service="productsRequest" entity="myProductRequest"
         columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;rprice;request_text;r_user;p_user;p_phone;r_phone;rprofit"
-        visible-columns="main_photo;product_name;start_date;end_date;p_user;p_phone;rprice;state;rprofit"
+        visible-columns="main_photo;product_name;start_date;end_date;p_user;p_phone;rprice;state;rprofit;CANCEL"
         query-rows="20" pageable="no" insert-button="no" delete-button="no" detail-mode="none" refresh-button="none"
         virtual-scroll="no">
         <!-- auto-adjust="yes" -->
