--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.css
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.css
@@ -10,6 +10,9 @@
     display: flex;
     justify-content: center;
 }
+.container o-form{
+    /* height: 50%; */
+}
 .product-details-container{
     display: flex;
  
@@ -38,28 +41,58 @@
 
 .image-list-container{
     width: 20%;
-    height: 100%;
-    padding-top: 25px;
-    padding: 10px;
+    /* height: 100%; */
+    /* padding-top: 25px; */
+    /* padding: 10px; */
     /* margin-left: 20px; */
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
+        /* margin-top: 10px; */
+        /* height: 100%; */
 
+    /* padding: 30px 60px 20px 60px;  */
+    padding-top: 10px;
     /* justify-content: center; */
 }
 .image-list-container o-column{
     border-radius: 50px;
+    /* padding: 30px 10px 20px 10px;  */
+    /* width: 100%; */
+    /* height: 100%; */
     
+
+    /* padding: 10px; */
+    /* padding-bottom: 40px; */
+    /* overflow: scroll; */
+    /* margin-left: 20px; */
+}
+.image-list-container o-list{
+    /* border-radius: 50px; */
+    /* padding-top: 30px; */
+    margin-top: 30px;
+    margin-bottom: 40px;
+    height: 100%;
+    margin-left: 10px;
+  
+    /* height: 100%; */
+    
+    /* margin: 10px; */
+    
+    /* padding: 10px; */
+    
+    /* padding: 10px; */
+    /* margin-bottom: 30px; */
+
     /* overflow: scroll; */
     /* margin-left: 20px; */
 }
 
 .list-container{
-        width: 100%;
-        height: 100%;
+        /* width: 100%;
+        height: 100%; */
 }
 .list-container o-column{
-    padding: 40px 0px 40px 5px;
+    /* padding: 40px 0px 40px 5px; */
     /* margin-right: 10px; */
     /* margin-top: 15px; */
 }
@@ -82,12 +115,12 @@
 .detail-container-column{
     border-radius: 50px;
     /* height: 50%; */
-     padding: 80px 50px 80px 50px; 
+     padding: 60px 50px 60px 50px; 
      margin: 10px;
 }
 
 .detail-container o-row {
-    padding: 25px;
+    padding: 20px;
     /* padding: 20px; */
     /* padding: 5px 0px 5px 5px; */
     /* width: 100%; */
