--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.html
@@ -1,33 +1,34 @@
 <div class="container">
-  <o-form #form fxLayout="column" service="products" entity="product" keys="id_product"
+  <o-form #form service="products" entity="product" keys="id_product"
     columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_"
     show-header-navigation="yes" header-actions="U;D" (onDataLoaded)="loadData($event)">
-    <!-- (onDataLoaded)="loadData($event)" -->
+    <!-- (onDataLoaded)="loadData($event)" fxLayout="column"-->
     <o-text-input oHidden enabled="no" attr="id_product" sql-type="INTEGER"></o-text-input>
     <div class="product-details-container">
       <div class="image-container">
         <o-column class="image-container-column">
           <o-image id="main_photo" attr="main_photo" empty-image="assets/images/no-image.png" sql-type="OTHER"
-          image-type="base64"></o-image>
+            image-type="base64"></o-image>
         </o-column>
 
       </div>
       <div class="image-list-container">
-        <div class="list-container">
-          <o-column>
-            <o-list #list attr="list" title="{{'SECONDARY_IMAGES' | oTranslate}}" virtual-scroll="yes"
-              service="products" entity="productImage" parent-keys="tproducts_id_product:id_product"
-              columns="id_image;tproducts_id_product;pimage" keys="id_image" refresh-button="no" insert-button="true"
-              delete-mode="true" quick-filter="no" row-height="big" detail-mode="true" delete-button="yes"
-              selectable="yes" insert-button="yes" insert-button-floatable="yes" insert-button-position="top"
-              collapsed="true" collapsible="true" detail-mode="true">
-              <o-list-item *ngFor="let row of list.dataArray">
-                <o-list-item-card-image image="data:image/png;base64,{{row.pimage}}" (click)="openZoomDialog(row)"></o-list-item-card-image>
-                <!-- (icon-action)="onIconAction()" collapsible="false"  -->
-              </o-list-item>
-            </o-list>
-          </o-column>
-        </div>
+        <!-- <div class="list-container"> -->
+        <o-column>
+          <o-list #list attr="list" title="{{'SECONDARY_IMAGES' | oTranslate}}" virtual-scroll="yes" service="products"
+            entity="productImage" parent-keys="tproducts_id_product:id_product"
+            columns="id_image;tproducts_id_product;pimage" keys="id_image" refresh-button="no" insert-button="true"
+            delete-mode="true" quick-filter="no" row-height="big" detail-mode="true" delete-button="yes"
+            selectable="yes" insert-button="yes" insert-button-floatable="yes" insert-button-position="top"
+            collapsed="true" collapsible="true" detail-mode="true">
+            <o-list-item *ngFor="let row of list.dataArray">
+              <o-list-item-card-image image="data:image/png;base64,{{row.pimage}}"
+                (click)="openZoomDialog(row)"></o-list-item-card-image>
+              <!-- (icon-action)="onIconAction()" collapsible="false"  -->
+            </o-list-item>
+          </o-list>
+        </o-column>
+        <!-- </div> -->
       </div>
       <div class="detail-container">
         <o-column class="detail-container-column">
