--- a/camerafront/src/app/main/products/products-new-rental/products-new-rental.component.html
+++ b/camerafront/src/app/main/products/products-new-rental/products-new-rental.component.html
@@ -4,59 +4,25 @@
             <div class="image">
                 <img src="data:image/png;base64,{{data.main_photo}}">
             </div>
-
             <div class="title-string">
                 <h1>{{data.product_name}}</h1>
                 <div class="location">
                     <span><mat-icon>location_on</mat-icon>{{data.plocation}}</span>
                 </div>
-
-
             </div>
-
         </div>
-        <!-- <mat-form-field appearance="fill">
-            <mat-label>Enter a date range</mat-label>
-            <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-              <input matStartDate formControlName="start" placeholder="Start date">
-              <input matEndDate formControlName="end" placeholder="End date">
-            </mat-date-range-input>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-          
-            <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-            <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-          </mat-form-field> -->
-        <!-- <mat-form-field>
-            <mat-label>Enter a date range</mat-label>
-            <mat-date-range-input>
-                <input matStartDate placeholder="Start date">
-                <input matEndDate placeholder="End date">
-            </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix></mat-datepicker-toggle>
-            <mat-date-range-picker #rangePicker>
-                <mat-date-range-picker-actions>
-                    <button mat-button matDateRangePickerCancel>Cancel</button>
-                    <button mat-raised-button color="primary" matDateRangePickerApply>Apply</button>
-                </mat-date-range-picker-actions>
-            </mat-date-range-picker>
-        </mat-form-field> -->
         <mat-form-field class="example-full-width">
-            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker" [min]="minDate" placeholder="{{'CHOOSE START DATE' | oTranslate}}" [(ngModel)]="startDate">
+            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker" [min]="minDate"
+                placeholder="{{'CHOOSE START DATE' | oTranslate}}" [(ngModel)]="startDate">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-
-          <mat-form-field class="example-full-width">
-            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker2" [min]="calcMinDateTwo()" placeholder="{{'CHOOSE END DATE' | oTranslate}}" [(ngModel)]="endDate">
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+            <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker2" [min]="calcMinDateTwo()"
+                placeholder="{{'CHOOSE END DATE' | oTranslate}}" [(ngModel)]="endDate">
             <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
             <mat-datepicker #picker2></mat-datepicker>
-          </mat-form-field>
-        <!-- <o-text-input fxFill class="input-padding" attr="product_name" required="yes"></o-text-input> -->
-        <!-- <o-daterange-input style="color:aliceblue" attr="date" label="{{ 'INPUT.BUTTON.DATERANGE' | oTranslate }}"
-            required="yes" (click)="validateReservation($event)" Filter="myFilter">
-        </o-daterange-input> -->
+        </mat-form-field>
         <o-text-input style="color:aliceblue" fxFill attr="request_text" label="request_text"></o-text-input>
     </div>
     <div class="button-container">
