--- a/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
@@ -1,13 +1,11 @@
 <mat-tab-group oTabGroup="My rentals">
   <mat-tab label="{{'YOUR RENTAL REQUESTS' | oTranslate }}">
-    <!-- <div class="out-container"> -->
     <o-column>
       <o-table #tablein auto-align-titles="yes" service="productsRequest" entity="myProductRequest"
         columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;rprice;request_text;r_user;p_user;p_phone;r_phone;rprofit"
         visible-columns="main_photo;product_name;start_date;end_date;p_user;p_phone;rprice;state;rprofit;CANCEL"
         query-rows="20" pageable="no" insert-button="no" delete-button="no" detail-mode="none" refresh-button="none"
         virtual-scroll="no">
-        <!-- auto-adjust="yes" -->
         <o-table-column attr="product_name" title="product_name"></o-table-column>
         <o-table-column attr="main_photo" orderable="no" searchable="no" width="64px">
           <o-table-cell-renderer-image image-type="base64" empty-image="assets/images/no-image.png" avatar="yes">
@@ -23,18 +21,14 @@
         <o-table-column attr="state" title="state" title-align="center">
           <app-status-column-renderer></app-status-column-renderer>
         </o-table-column>
-        <!-- [operation-function]="calculateProfit" -calculated -->
         <o-table-column attr="rprofit" title="COST" currency-symbol="€" type="currency" currency-symbol-position="right"
           title-align="center">
         </o-table-column>
-        <o-table-column max-width="10px"  attr="CANCEL" title="CANCEL" icon="close" title-align="center">
-          <!-- <o-table-cell-renderer-action (onClick)="cancelRequest($event)" icon="event_busy"></o-table-cell-renderer-action> -->
+        <o-table-column max-width="10px" attr="CANCEL" title="CANCEL" icon="close" title-align="center">
           <app-button-column-renderer (messageEvent)="cancelRequest($event)"></app-button-column-renderer>
         </o-table-column>
       </o-table>
     </o-column>
-
-    <!-- </div> -->
   </mat-tab>
   <mat-tab label="{{'YOUR RENTALS' | oTranslate }}">
     <div class="out-container">
@@ -43,7 +37,6 @@
         columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;request_text;r_user;p_user;p_phone;r_phone;rprice;rprofit"
         visible-columns="main_photo;product_name;start_date;end_date;state;rprice;rprofit" query-rows="20" pageable="no"
         insert-button="no" delete-button="no" detail-mode="none" refresh-button="none">
-        <!-- (onDataLoaded)="filterTable($event)" -->
         <o-table-column class="o-table-column-centered" attr="product_name" title="product_name"></o-table-column>
         <o-table-column attr="main_photo" orderable="no" searchable="no" width="64px">
           <o-table-cell-renderer-image image-type="base64" empty-image="assets/images/no-image.png" avatar="yes">
@@ -53,11 +46,8 @@
         <o-table-column attr="end_date" title="end_date" width="22%" type="date" format="L"></o-table-column>
         <o-table-column attr="rprice" title="price" currency-symbol="{{'€/DAY' | oTranslate}}" type="currency"
           currency-symbol-position="right" title-align="center"></o-table-column>
-        <!-- <o-table-column-calculated attr="profit" title="TOTAL" [operation-function]="calculateProfit"
-          currency-symbol="€" type="currency" currency-symbol-position="right">
-        </o-table-column-calculated> -->
-        <o-table-column attr="rprofit" title="COST" currency-symbol="€" type="currency"
-          currency-symbol-position="right" title-align="center">
+        <o-table-column attr="rprofit" title="COST" currency-symbol="€" type="currency" currency-symbol-position="right"
+          title-align="center">
         </o-table-column>
         <o-table-column attr="state" title="state" class="o-table-column-centered" title-align="center">
           <app-status-column-renderer></app-status-column-renderer>
