--- a/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.css
+++ b/camerafront/src/app/main/profile/myproducts-detail/myproducts-detail.component.css
@@ -1,135 +1,73 @@
 .container {
-    /* text-align: center; */
-    /* height: auto; */
     width: 100%;
     height: 100%;
-    /* overflow: hidden; */
-    /* 
-    flex-direction: column; 
-    align-items: center; */
     display: flex;
     justify-content: center;
 }
-.container o-form{
-    /* height: 50%; */
-}
-.product-details-container{
+
+.container o-form {}
+
+.product-details-container {
     display: flex;
- 
-    /* justify-content: space-between; */
     width: 100%;
     height: 70%;
 }
 
 .image-container {
     width: 55%;
-    
-    display: flex; 
-    /* align-items: center; */
-     justify-content: center;
+    display: flex;
+    justify-content: center;
 }
-.image-container o-image{
+
+.image-container o-image {
     width: 100%;
 }
-.image-container-column{
+
+.image-container-column {
     border-radius: 50px;
-    /* height: 50%; */
-     padding: 30px 60px 20px 60px; 
-     margin: 10px;
+    padding: 30px 60px 20px 60px;
+    margin: 10px;
 }
 
 
-.image-list-container{
+.image-list-container {
     width: 20%;
-    /* height: 100%; */
-    /* padding-top: 25px; */
-    /* padding: 10px; */
-    /* margin-left: 20px; */
-    /* display: flex;
-    align-items: center; */
-        /* margin-top: 10px; */
-        /* height: 100%; */
-
-    /* padding: 30px 60px 20px 60px;  */
     padding-top: 10px;
-    /* justify-content: center; */
 }
-.image-list-container o-column{
-    border-radius: 50px;
-    /* padding: 30px 10px 20px 10px;  */
-    /* width: 100%; */
-    /* height: 100%; */
-    
 
-    /* padding: 10px; */
-    /* padding-bottom: 40px; */
-    /* overflow: scroll; */
-    /* margin-left: 20px; */
+.image-list-container o-column {
+    border-radius: 50px;
 }
-.image-list-container o-list{
-    /* border-radius: 50px; */
-    /* padding-top: 30px; */
+
+.image-list-container o-list {
     margin-top: 30px;
     margin-bottom: 40px;
     height: 100%;
     margin-left: 10px;
-  
-    /* height: 100%; */
-    
-    /* margin: 10px; */
-    
-    /* padding: 10px; */
-    
-    /* padding: 10px; */
-    /* margin-bottom: 30px; */
-
-    /* overflow: scroll; */
-    /* margin-left: 20px; */
 }
 
-.list-container{
-        /* width: 100%;
-        height: 100%; */
-}
-.list-container o-column{
-    /* padding: 40px 0px 40px 5px; */
-    /* margin-right: 10px; */
-    /* margin-top: 15px; */
-}
+.list-container {}
+
+.list-container o-column {}
 
 .detail-container {
-    /* display: flex;
-    flex-direction: column;
-        align-items: center;
-        text-align: center; */
-    /* width: 80%; */
+
     border-radius: 50px;
-    /* height: 50%; */
-     /* padding: 30px 60px 20px 60px; 
-     margin: 20px; */
-    /* margin-right: 10px; */
-    /* margin-top: 15px; */
     width: 30%;
     height: 100%;
 }
-.detail-container-column{
+
+.detail-container-column {
     border-radius: 50px;
-    /* height: 50%; */
-     padding: 60px 50px 60px 50px; 
-     margin: 10px;
+    padding: 60px 50px 60px 50px;
+    margin: 10px;
 }
 
 .detail-container o-row {
     padding: 20px;
-    /* padding: 20px; */
-    /* padding: 5px 0px 5px 5px; */
-    /* width: 100%; */
-
 }
 
 .avaliable-container {
     padding: 5px 0px 5px 5px;
     height: 50px;
-    /* width: 100%; */
-
 }
